# fea-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: AdvectionDiffusionSolver.hpp  Application.hpp  BVH.hpp  Camera.hpp  ColorMap.hpp  GridInterface.hpp  GridVisual.hpp  HeatSolver.hpp  Mesh.hpp  PSLG.hpp  ReactionDiffusionSolver.hpp  ResourceManager.hpp  Shader.hpp  Solver.hpp  Surface.hpp  WaveSolver.hpp
include/FEM/: CPUSolver.hpp  EquationParameters.hpp  FEMContext.hpp  GPUSolver.hpp  Solver.hpp
include/Solvers/: AdvectionDiffusionSolver.hpp  HeatSolver.hpp  ReactionDiffusionSolver.hpp  Solver.hpp  WaveSolver.hpp
include/Utils/: AssetStorage.hpp  BVH.hpp  Camera.hpp  ColorMap.hpp  EnvironmentMap.hpp  GPUConjGrad.hpp  GridInterface.hpp  Mesh.hpp  PSLG.hpp  ResourceManager.hpp  Shader.hpp  Surface.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: brdf_convolution_frag.glsl  cgm.glsl  cgm_helper.glsl  default_frag.glsl  default_vert.glsl  dot_product.glsl  equirect_to_cube_frag.glsl  equirect_to_cube_vert.glsl  fem_mesh_frag.glsl  fem_mesh_vert.glsl  irradiance_convolution_frag.glsl  ndc_vert.glsl  prefilter_convolution_frag.glsl  skybox_frag.glsl  skybox_vert.glsl  smooth_normals.glsl  solid_color.frag  solid_color.vert  solid_color_frag.glsl  solid_color_vert.glsl  textured.frag  textured_frag.glsl  vertex_color.frag  vertex_color.vert  vertex_color_frag.glsl  vertex_color_vert.glsl
shaders/FEM/: cgm.glsl  cgm_helper.glsl  smooth_normals.glsl
shaders/PBR/: brdf_convolution.frag  equirect_to_cube.frag  equirect_to_cube.vert  fem_mesh.frag  fem_mesh.vert  irradiance_convolution.frag  ndc.vert  prefilter_convolution.frag  skybox.frag  skybox.vert
src/: AdvectionDiffusionSolver.cpp  Application.cpp  BVH.cpp  Camera.cpp  ColorMap.cpp  GridInterface.cpp  GridVisual.cpp  HeatSolver.cpp  Main.cpp  Mesh.cpp  PSLG.cpp  ReactionDiffusionSolver.cpp  Shader.cpp  Solver.cpp  Surface.cpp  WaveSolver.cpp
src/FEM/: CPUSolver.cpp  FEMContext.cpp  GPUSolver.cpp
src/Solvers/: AdvectionDiffusionSolver.cpp  HeatSolver.cpp  ReactionDiffusionSolver.cpp  Solver.cpp  WaveSolver.cpp
src/Utils/: AssetStorage.cpp  BVH.cpp  Camera.cpp  ColorMap.cpp  EnvironmentMap.cpp  GPUConjGrad.cpp  GridInterface.cpp  Mesh.cpp  PSLG.cpp  Shader.cpp  Surface.cpp
